add telemetry service
